<resources>
    <string name="app_name">Calculator Begins</string>
    <string name="action_history">History</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_fav">ADD TO FAVOURITES</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="expression"> </string>
    <string name="result">0</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M-</string>
    <string name="MS">MS</string>
    <string name="M">MY</string>
    <string name="HIS">HIS</string>
    <string name="no_memory">No Memory Yet!</string>
    <string name="no_history">No History Yet!</string>
    <string name="no_fav">No Favourites Yet!</string>
    <string name="menu_delete">Delete</string>
    <string name="delete">DEL</string>
    <string name="clr">CLR</string>
    <string name="CE">CE</string>
    <string name="Clear">Clear</string>
    <string name="backspace">&lt;-</string>
    <string name="left">&lt;</string>
    <string name="right">></string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="hex_A">A</string>
    <string name="hex_B">B</string>
    <string name="hex_C">C</string>
    <string name="hex_D">D</string>
    <string name="hex_E">E</string>
    <string name="hex_F">F</string>
    <string name="AND">&amp;&amp;</string>
    <string name="OR">||</string>
    <string name="XOR">XOR</string>
    <string name="NOT">NOT</string>
    <string name="functions">FUNC</string>
    <string name="constants">CONST</string>
    <string name="memory">Mem.</string>
    <string name="ascii">ASCII</string>
    <string name="favourites">FAVS</string>
    <string name="rates">Rates</string>
    <string name="swap">SWAP</string>
    <string name="deg">DEG</string>
    <string name="rad">RAD</string>
    <string name="grad">GRAD</string>
    <string name="abs">abs</string>
    <string name="ceil">ceil</string>
    <string name="cosd">cos°</string>
    <string name="sind">sin°</string>
    <string name="tand">tan°</string>
    <string name="acos">cos⁻¹</string>
    <string name="asin">sin⁻¹</string>
    <string name="atan">tan⁻¹</string>
    <string name="abs2">abs\u00b2</string>
    <string name="acosd">cos⁻¹°</string>
    <string name="acosh">cosh⁻¹</string>
    <string name="asind">sin⁻¹°</string>
    <string name="asinh">sinh⁻¹</string>
    <string name="atand">tan⁻¹°</string>
    <string name="atanh">tanh⁻¹</string>
    <string name="combinations">nCr</string>
    <string name="conjugate">cnj</string>
    <string name="gcd">gcd</string>
    <string name="mod">mod</string>
    <string name="permutations">nPr</string>
    <string name="cosh">cosh</string>
    <string name="exp">exp</string>
    <string name="floor">floor</string>
    <string name="log">ln</string>
    <string name="log10">log10</string>
    <string name="log2">log2</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="pow">pow</string>
    <string name="random">random</string>
    <string name="rint">rint</string>
    <string name="round">round</string>
    <string name="sinh">sinh</string>
    <string name="tanh">tanh</string>
    <string name="toDegrees">toDegrees</string>
    <string name="toRadians">toRadians</string>
    <string name="percent">%</string>
    <string name="root">\u00b2\u221a</string>
    <string name="square">x\u00b2</string>
    <string name="reciprocal">1/x</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="xPowern">x^n</string>
    <string name="tenPowern">10^n</string>
    <string name="taxPlus">tax+</string>
    <string name="taxMinus">tax-</string>
    <string name="markup">markup+</string>
    <string name="discount">discount</string>
    <string name="currency_name">Name</string>
    <string name="rate">Rate</string>
    <string name="hint">Enter value</string>
    <string name="btn_refresh">REFRESH</string>
    <string name="toast_update">Update currency</string>
    <string name="no_data">No data</string>
    <string name="play_store_dev_link">https://play.google.com/store/apps/developer?id=P.I.M.P.</string>
    <string name="email_id">pimplay69@gmail.com</string>
    <string name="paid">Download Calculator # to remove ads</string>
    <string name="welcome_title">Welcome to Calculator\u00b3</string>
    <string name="developer">Developed by Adithya J and Satheesh P\nIcons Designed by Shailesh</string>
    <string name="pimp">Team P.I.M.P</string>
    <string name="play_card_title">P.I.M.P.</string>
    <string name="play_card_content">"Check out more apps by P.I.M.P."</string>
    <string name="close">Close</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="play">PLAY STORE</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="web">PAGE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="gplus">GOOGLE+</string>
    <string name="ratebtn">RATE</string>
    <string name="arcsin">asin</string>
    <string name="arccos">acos</string>
    <string name="arctan">atan</string>
    <string name="integral" translatable="false">\u222B</string>
    <string name="dx">dX</string>
    <string name="dy">dY</string>
    <string name="solveForX">Solve for X</string>
    <string name="solveForY">Solve for Y</string>
    <string name="cbrt">\u00b3\u221a</string>
    <string name="i" translatable="false">i</string>
    <string name="percentage" translatable="false">%</string>
    <string name="parentheses" translatable="false">( )</string>
    <string name="det">det</string>
    <string name="eigenvalue">Eigen</string>
    <string name="solve">Solve</string>
    <string name="dotProduct">Dot</string>
    <string name="crossProduct">Cross</string>
    <string name="determinantDesc">det</string>
    <string name="eigenvalueDesc">Eigenvalues</string>
    <string name="plus_row">+Row</string>
    <string name="minus_row">-Row</string>
    <string name="plus_col">+Col</string>
    <string name="minus_col">-Col</string>
    <string name="matrix_new" translatable="false">[ ]</string>
    <string name="matrix_inverse" translatable="false">-1</string>
    <string name="matrix_transpose">T</string>
    <string name="next">Next</string>
    <string name="copy">Copy \'%s\'</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="C" translatable="false">C</string>
    <string name="D" translatable="false">D</string>
    <string name="E" translatable="false">E</string>
    <string name="F" translatable="false">F</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="sign" translatable="false">+/\u2212</string>
    <string name="coma" translatable="false">,</string>
    <string name="matrix">Matrix panel</string>
    <string name="graph">Graph panel</string>
    <string name="function">Function panel</string>
    <string name="hexPanel">Hex panel</string>
    <string name="lock">Lock page</string>
    <string name="unlock">Unlock page</string>
    <string name="info">Info</string>
    <string name="showHistory">Show history</string>
    <string name="hideHistory">Hide history</string>
    <string name="settings">Settings</string>
    <string name="store">Store</string>
    <string name="hex">Hex</string>
    <string name="bin">Bin</string>
    <string name="dec">Dec</string>
    <string name="hexDesc">Hexadecimal</string>
    <string name="binDesc">Binary</string>
    <string name="decDesc">Decimal</string>
    <string name="preferences_option_default">Default</string>
    <string name="pref_panels">Panels</string>
    <string name="pref_actions">Actions</string>
    <string name="pref_units">Units</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_about">About</string>
    <string name="returnToBasic">Return to the basic panel</string>
    <string name="infiniteScrolling">Infinite scrolling</string>
    <string name="clickToOpenHistory">Click to open history</string>
    <string name="digitGrouping">Digit grouping</string>
    <string name="trigUnits">Trig units</string>
    <string name="radians">RAD</string>
    <string name="degrees">DEG</string>
    <string name="theme">Theme</string>
    <string name="showDetails">Show Details</string>
    <string name="floatingCalc">Floating Calculator</string>
    <string name="vibrateOnPress">Vibrate on Click</string>
    <string name="showWidgetBackground">Show Widget Background</string>
    <string name="cling_simple_title">Welcome</string>
    <string name="cling_simple_msg">Slide left and right to access more content. Unnecessary pages can be disabled in Settings.</string>
    <string name="cling_matrix_title">Matrices</string>
    <string name="cling_matrix_msg">Tap here to start building and solving matrices.</string>
    <string name="cling_hex_title">Change bases</string>
    <string name="cling_hex_msg">Switch between decimal (dec), binary (bin), and hexadecimal (hex).\n\nWarning: If you believe you\'re getting bad results, you\'re probably in the wrong base. The default is decimal.</string>
    <string name="cling_graph_title">Graph</string>
    <string name="cling_graph_msg">Graphs will automatically show up here. Go to the advanced panel and build a function using X and Y.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dec_separator">,</string>
    <string name="bin_separator">\u0020</string>
    <string name="hex_separator">\u0020</string>
    <string name="dot">.</string>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">DELETE</string>
    <string name="clear">CLR</string>
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="equal">=</string>
    <string name="enter">\u2193</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">\u03c0</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="lg">log</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="sqrt">\u221a</string>
    <string name="power">^</string>
    <string name="factorial">!</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="clear_history">Clear history</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="primary_text_color">Primary Text Color</string>
</resources>