<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simplePad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit7"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit7" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit8"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit8" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit9"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit9" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/div"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/div" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit4"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit4" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit5"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit5" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit6"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit6" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/mul"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit1"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit1" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit2"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit2" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit3"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit3" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/minus"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/dot"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/dot" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit0"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit0" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/equal"
            style="@style/Theme.Calculator.ButtonStyle.Equal"
            android:text="@string/equal" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/plus"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/plus" />
    </LinearLayout>
</LinearLayout>
