<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Calculator Begins
  ~ Copyright (C) 2017  Adithya J
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simplePad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/matrix_transpose"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/matrix_transpose" />

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/matrix_inverse"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/matrix_inverse" />
        </LinearLayout>

        <LinearLayout
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/minus_row"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/minus_row" />

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/plus_row"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/plus_row" />
        </LinearLayout>

        <LinearLayout
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/minus_col"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/minus_col" />

            <com.pimp.calculator.FloatingView.ColorButton
                android:id="@+id/plus_col"
                style="@style/Theme.Calculator.ButtonStyle.Half"
                android:text="@string/plus_col" />
        </LinearLayout>

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/matrix"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/matrix_new" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit7"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit7" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit8"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit8" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit9"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit9" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/mul"
            style="@style/Theme.Calculator.ButtonStyle"
            android:hint="@string/div"
            android:text="@string/mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit4"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit4" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit5"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit5" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit6"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit6" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/plus"
            style="@style/Theme.Calculator.ButtonStyle"
            android:hint="@string/minus"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit1"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit1" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit2"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit2" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit3"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit3" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/next"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/next"
            android:textSize="@dimen/btn_function_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/dot"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/dot" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/digit0"
            style="@style/Theme.Calculator.ButtonStyle.Digit"
            android:text="@string/digit0" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/equal"
            style="@style/Theme.Calculator.ButtonStyle.Equal"
            android:text="@string/equal" />

        <com.pimp.calculator.FloatingView.ColorButton
            android:id="@+id/det"
            style="@style/Theme.Calculator.ButtonStyle"
            android:text="@string/det"
            android:textSize="@dimen/btn_function_text_size" />
    </LinearLayout>
</LinearLayout>
